# civitas

./: .dockerignore  .gitignore  .gitlab-ci.yml  .oldgitlab-ci.yml  Abgabedokumentation.md  Guide.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  CI.md  DOCKER.md  Dockerfile  blabla.ini  pyproject.toml  requirements-linux.txt  requirements-new.txt  requirements.txt
backend/src/: ToDo-Snapshots.md  userjourney.md
backend/src/backend/: __init__.py  config.py  depr_auth.py  entrypoint.py  main.py
backend/src/backend/api/: __init__.py  deps.py  health.py
backend/src/backend/businesslogic/: __init__.py  buildingblock.py  form.py  mainTable.py  section.py  selfRegistration.py  trigger.py  user.py
backend/src/backend/core/: __init__.py  config.py  db.py  ormUtil.py  roleAuth.py  (+1 more)
backend/tests/: TESTING.md  ormTesting.py
backend/tests/api/: test_creatingApplication.py  test_creating_application.py  test_deps.py  test_user_api.py  testxformTODO.py  testxform_api.py  testxuserxapi.py
backend/tests/businesslogic/: testApplicationServices.py  testFormLogic.py  test_ApplicationServices.py  test_FormLogic.py  test_Registration.py  test_trigger.py  testingPublishing.py  testxAdminServices.py  testxApplicationServices.py  testxPublishing.py  testxtrigger.py
backend/tests/core/: test_db.py  test_ormUtil.py
backend/tests/crud/: test_application_crud.py  test_dbActions.py  test_form_crud.py  test_role.py  test_user.py
backend/tests/models/: test_form_model.py  test_orm.py
(+93 files in other folders)
